--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,17 @@
     </dependency>
 
     <dependency>
+      <groupId>com.fasterxml.uuid</groupId>
+      <artifactId>java-uuid-generator</artifactId>
+      <version>3.1.4</version>
+    </dependency>
+    <dependency>
+      <groupId>com.google.jimfs</groupId>
+      <artifactId>jimfs</artifactId>
+      <version>1.1</version>
+    </dependency>
+
+    <dependency>
       <groupId>org.jooby</groupId>
       <artifactId>jooby-lang-kotlin</artifactId>
       <version>${jooby.version}</version>
