--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,11 @@
       <artifactId>jimfs</artifactId>
       <version>1.1</version>
     </dependency>
+    <dependency>
+      <groupId>io.reactivex.rxjava2</groupId>
+      <artifactId>rxjava</artifactId>
+      <version>2.1.1</version>
+    </dependency>
 
     <dependency>
       <groupId>org.jooby</groupId>
