--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,11 @@
       <artifactId>java-uuid-generator</artifactId>
       <version>3.1.4</version>
     </dependency>
+    <dependency>
+      <groupId>com.jayway.jsonpath</groupId>
+      <artifactId>json-path</artifactId>
+      <version>2.3.0</version>
+    </dependency>
 
     <dependency>
       <groupId>org.jooby</groupId>
