--- a/pom.xml
+++ b/pom.xml
@@ -2,11 +2,6 @@
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <parent>
-    <groupId>org.jooby</groupId>
-    <artifactId>modules</artifactId>
-    <version>1.1.3</version>
-  </parent>
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>srl.paros</groupId>
@@ -17,47 +12,66 @@
   <description>A Noob Chain</description>
 
   <properties>
-    <kotlin.version>1.1.3</kotlin.version>
+    <kotlin.version>1.1.4</kotlin.version>
     <java.version>1.8</java.version>
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
 
-    <jooby.version>1.1.3</jooby.version>
-
-    <!-- Startup class -->
-    <application.class>org.jooby.kickstart.App</application.class>
     <unirest.version>1.4.9</unirest.version>
+    <spark.version>2.6.0</spark.version>
+    <jgroups.version>4.0.4.Final</jgroups.version>
+    <logback.version>1.2.3</logback.version>
+    <junit.version>4.12</junit.version>
+    <h2.version>1.4.196</h2.version>
+    <hikari.version>2.6.3</hikari.version>
+    <rxjava.jdbc.version>0.7.7</rxjava.jdbc.version>
   </properties>
 
   <dependencies>
+    <!-- server -->
     <dependency>
-      <groupId>org.jooby</groupId>
-      <artifactId>jooby-jetty</artifactId>
-      <version>${jooby.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.jooby</groupId>
-      <artifactId>jooby-gson</artifactId>
-      <version>${jooby.version}</version>
+      <groupId>com.sparkjava</groupId>
+      <artifactId>spark-core</artifactId>
+      <version>${spark.version}</version>
     </dependency>
 
+    <!-- clustering -->
+    <dependency>
+      <groupId>org.jgroups</groupId>
+      <artifactId>jgroups</artifactId>
+      <version>${jgroups.version}</version>
+    </dependency>
+
+    <!-- uuid -->
     <dependency>
       <groupId>com.fasterxml.uuid</groupId>
       <artifactId>java-uuid-generator</artifactId>
       <version>3.1.4</version>
     </dependency>
+
+    <!-- data -->
     <dependency>
       <groupId>com.jayway.jsonpath</groupId>
       <artifactId>json-path</artifactId>
       <version>2.3.0</version>
     </dependency>
-
     <dependency>
-      <groupId>org.jooby</groupId>
-      <artifactId>jooby-lang-kotlin</artifactId>
-      <version>${jooby.version}</version>
+      <groupId>com.h2database</groupId>
+      <artifactId>h2</artifactId>
+      <version>${h2.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>com.zaxxer</groupId>
+      <artifactId>HikariCP</artifactId>
+      <version>${hikari.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>com.github.davidmoten</groupId>
+      <artifactId>rxjava-jdbc</artifactId>
+      <version>${rxjava.jdbc.version}</version>
     </dependency>
 
+    <!-- runtime -->
     <dependency>
       <groupId>org.jetbrains.kotlin</groupId>
       <artifactId>kotlin-stdlib-jre8</artifactId>
@@ -68,9 +82,10 @@
     <dependency>
       <groupId>ch.qos.logback</groupId>
       <artifactId>logback-classic</artifactId>
-      <version>${logback-classic.version}</version>
+      <version>${logback.version}</version>
     </dependency>
 
+    <!-- testing -->
     <dependency>
       <groupId>org.jetbrains.kotlin</groupId>
       <artifactId>kotlin-test-junit</artifactId>
