--- a/pom.xml
+++ b/pom.xml
@@ -25,10 +25,16 @@
     <h2.version>1.4.196</h2.version>
     <hikari.version>2.6.3</hikari.version>
     <rxjava.jdbc.version>0.7.7</rxjava.jdbc.version>
+    <undertow.version>1.4.18.Final</undertow.version>
   </properties>
 
   <dependencies>
     <!-- server -->
+    <dependency>
+      <groupId>io.undertow</groupId>
+      <artifactId>undertow-core</artifactId>
+      <version>${undertow.version}</version>
+    </dependency>
     <dependency>
       <groupId>com.sparkjava</groupId>
       <artifactId>spark-core</artifactId>
