--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
   <description>A Noob Chain</description>
 
   <properties>
-    <kotlin.version>1.1.4</kotlin.version>
+    <kotlin.version>1.1.4-2</kotlin.version>
     <java.version>1.8</java.version>
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
@@ -111,6 +111,12 @@
       <artifactId>unirest-java</artifactId>
       <version>${unirest.version}</version>
       <scope>test</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
+      <version>23.0</version>
     </dependency>
   </dependencies>
 
