--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,8 @@
     <hikari.version>2.6.3</hikari.version>
     <rxjava.jdbc.version>0.7.7</rxjava.jdbc.version>
     <undertow.version>1.4.18.Final</undertow.version>
+    <uuid.generator.version>3.1.4</uuid.generator.version>
+    <jcabi.jdbc.version>0.16</jcabi.jdbc.version>
   </properties>
 
   <dependencies>
@@ -34,11 +36,6 @@
       <groupId>io.undertow</groupId>
       <artifactId>undertow-core</artifactId>
       <version>${undertow.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>com.sparkjava</groupId>
-      <artifactId>spark-core</artifactId>
-      <version>${spark.version}</version>
     </dependency>
 
     <!-- clustering -->
@@ -52,7 +49,7 @@
     <dependency>
       <groupId>com.fasterxml.uuid</groupId>
       <artifactId>java-uuid-generator</artifactId>
-      <version>3.1.4</version>
+      <version>${uuid.generator.version}</version>
     </dependency>
 
     <!-- data -->
@@ -75,6 +72,11 @@
       <groupId>com.github.davidmoten</groupId>
       <artifactId>rxjava-jdbc</artifactId>
       <version>${rxjava.jdbc.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>com.jcabi</groupId>
+      <artifactId>jcabi-jdbc</artifactId>
+      <version>${jcabi.jdbc.version}</version>
     </dependency>
 
     <!-- runtime -->
