--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,7 @@
     <undertow.version>1.4.18.Final</undertow.version>
     <uuid.generator.version>3.1.4</uuid.generator.version>
     <jcabi.jdbc.version>0.16</jcabi.jdbc.version>
+    <rest.assured.version>3.0.3</rest.assured.version>
   </properties>
 
   <dependencies>
@@ -111,9 +112,9 @@
     </dependency>
 
     <dependency>
-      <groupId>com.google.guava</groupId>
-      <artifactId>guava</artifactId>
-      <version>23.0</version>
+      <groupId>io.rest-assured</groupId>
+      <artifactId>rest-assured</artifactId>
+      <version>${rest.assured.version}</version>
     </dependency>
   </dependencies>
 
